--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -20,8 +20,8 @@
   </header>
 
   <nav class="main" id="n1" role="navigation">
-    <span><a href="/">Inicio</a></span>
-    <span><a href="/quizes/question">Preguntas</a></span>
+    <span><a href="/"      >Inicio</a></span>
+    <span><a href="/quizes">Preguntas</a></span>
     <span><a href="/author">Autores</a></span>
   </nav>
 
