--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="utf-8"><title> Preguntas </title>
-  <link rel='stylesheet' href='/stylesheets/style.css' />
+  <meta charset="utf-8">
+  <title> Preguntas </title>
+  <link rel='stylesheet'
+        type='text/css'
+        href='/stylesheets/style.css' />
   <link rel='stylesheet'
         type='text/css'
         media='only screen and (min-width: 530px) and (min-device-width: 481px)'
@@ -26,18 +29,23 @@
   </nav>
 
   <section class="main" id="s1">
-    <div><table>
-      <tr><td><a href="quizes/1">Capital de Italia</a></td></tr>
-      <tr><td><a href="quizes/2">Capital de Portugal</a></td></tr>
-    </table>
-    </div>
+      <% if (errors.length) { %>
+          <span id='ErrorMsgs'>
+              Corregir errores:<br/>
+              <% for (var i in errors) { %>
+                  <span><%= errors[i].message %></span><br/>
+              <% } %>
+          </span>
+      <% } %>
+
+      <div><%- body %></div>
   </section>
 
   <footer class="main" id="f1">
-    <a href="http://es.wikipedia.org/wiki/Quiz">
-      ¿Que es un Quiz?</a>
-    <a href="https://github.com/pabloarcones/quiz">
-        Repositorio GitHub</a>
+    <p><a href="http://es.wikipedia.org/wiki/Quiz">
+      ¿Que es un Quiz?</a></p>
+    <p><a href="https://github.com/pabloarcones/quiz">
+        Repositorio web del proyecto en GitHub</a>
   </footer>
 </div>
 </body>
