Buscador de preguntas

--- a/views/quizes/index.ejs
+++ b/views/quizes/index.ejs
@@ -20,3 +20,11 @@
 <% } %>
 </table>
 <p><a href="/quizes/new"><button type="button">Crear pregunta</button></a>
+
+<p>
+    <form method="get" action="/quizes">
+        <p>Buscador de preguntas</p>
+        <input type="text" name="search" value="Texto a buscar" />
+        <input type="submit" value="Buscar" />
+    </form>
+</p>
