--- a/views/quizes/index.ejs
+++ b/views/quizes/index.ejs
@@ -24,7 +24,7 @@
 <p>
     <form method="get" action="/quizes">
         <p>Buscador de preguntas</p>
-        <input type="text" name="search" value="Texto a buscar" />
+        <input type="text" name="search" placeholder="Texto a buscar" />
         <input type="submit" value="Buscar" />
     </form>
 </p>
