--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -38,6 +38,7 @@
   <nav class="main" id="n1" role="navigation">
     <span><a href="/"      >Inicio</a></span>
     <span><a href="/quizes">Preguntas</a></span>
+    <span><a href="/quizes/statistics">Estadísticas</a></span>
     <span><a href="/author">Autores</a></span>
   </nav>
 
