Tabla de usuarios

--- a/views/quizes/_form.ejs
+++ b/views/quizes/_form.ejs
@@ -1,6 +1,6 @@
 <p>
     <label for="preg" class="rem">Pregunta:</label>
-    <input type="text" id="preg" name="quiz[pregunta]" value="<%= quiz.pregunta %>" />
+    <input type="text" id="preg" name="quiz[pregunta]" placeholder="<%= quiz.pregunta %>" />
 </p>
 <p>
     <label for="resp" class="rem">Respuesta:</label>
