--- a/views/quizes/_form.ejs
+++ b/views/quizes/_form.ejs
@@ -4,7 +4,7 @@
 </p>
 <p>
     <label for="resp" class="rem">Respuesta:</label>
-    <input type="text" id="resp" name="quiz[respuesta]" value="<%= quiz.respuesta %>" />
+    <input type="text" id="resp" name="quiz[respuesta]" placeholder="<%= quiz.respuesta %>" />
 </p>
 <p>
     <a href="/quizes"><button type="button">Cancelar</button></a>
