--- a/public/stylesheets/smartphone.css
+++ b/public/stylesheets/smartphone.css
@@ -1,8 +1,10 @@
-body             { background: #333; }
+body                            { background: #333; }
 
-#page-wrap:after { content: "Smartphone Layout"; }
+#page-wrap:after                { content: "Smartphone Layout"; }
 
-h2 span, section h3, label.rem { display: none; }
-body                { font-size: xx-large; }
-button, input       { font-size: x-large; }
-footer              { font-size: large; }
+h2 span, section h3, label.rem  { display: none; }
+body                            { font-size: xx-large; }
+button, input                   { font-size: x-large; }
+footer                          { font-size: large; }
+
+.quiz_img                        { float: none; }
