--- a/views/quizes/_form.ejs
+++ b/views/quizes/_form.ejs
@@ -2,10 +2,17 @@
     <label for="preg" class="rem">Pregunta:</label>
     <input type="text" id="preg" name="quiz[pregunta]" placeholder="<%= quiz.pregunta %>" />
 </p>
+
 <p>
     <label for="resp" class="rem">Respuesta:</label>
     <input type="text" id="resp" name="quiz[respuesta]" placeholder="<%= quiz.respuesta %>" />
 </p>
+
+<p>
+    <label for="image" class="rem">Imagen:</label>
+    <input type="file" accept="image/*" id="image" name="image"/>
+</p>
+
 <p>
     <a href="/quizes"><button type="button">Cancelar</button></a>
     <input type="submit" value="Guardar">
