--- a/views/quizes/edit.ejs
+++ b/views/quizes/edit.ejs
@@ -1,5 +1,7 @@
 <p>Edite la pregunta</p>
 
-<form method="post" action="/quizes/<%= quiz.id %>?_method=put">
-    <% include _form.ejs %>
+<form method="post"
+  action="/quizes/<%= quiz.id %>?_method=put"
+  enctype="multipart/form-data">
+  <% include _form.ejs %>
 </form>
