--- a/views/quizes/index.ejs
+++ b/views/quizes/index.ejs
@@ -1,11 +1,11 @@
 <table>
   <%
-      var i;
-      for(i = 0; i < quizes.length; i++) {
-      %>
+    var i;
+    for(i = 0; i < quizes.length; i++) {
+  %>
         <tr>
             <td>
-                <a href="quizes/<%= quizes[i].id %>">
+                <a href="/quizes/<%= quizes[i].id %>">
                     <%= quizes[i].pregunta %>
                 </a>
             </td>
@@ -15,13 +15,13 @@
               if (session.user.isAdmin || session.user.id === quizes[i].UserId) {
               %>
                 <td>
-                    <a href="quizes/<%= quizes[i].id %>/edit">
+                    <a href="/quizes/<%= quizes[i].id %>/edit">
                         <button>Editar</button>
                     </a>
                 </td>
 
                 <td>
-                    <form method="post" action="quizes/<%= quizes[i].id %>?_method=delete">
+                    <form method="post" action="/quizes/<%= quizes[i].id %>?_method=delete">
                         <button type="submit" onClick="return confirm('Borrar: <%= quizes[i].pregunta %>');">Borrar</button>
                     </form>
                 </td>
