--- a/views/user/_form.ejs
+++ b/views/user/_form.ejs
@@ -9,6 +9,11 @@
 </p>
 
 <p>
+    <label for="image" class="rem">Imagen:</label>
+    <input type="file" accept="image/*" id="image" name="image"/>
+</p>
+
+<p>
   <a href="/"><button type="button">Cancelar</button></a>
   <input type="submit" value="Enviar">
 </p>
