--- a/public/stylesheets/wide.css
+++ b/public/stylesheets/wide.css
@@ -3,6 +3,6 @@ body { background: #999; }
 #page-wrap:after { content: "Wide Layout"; }
 
 nav       { float: left; width: 15%;}
-nav span  { margin: 0px 100px 0px 0px;}
+nav span  { margin: 0px 100px 10px 0px; text-align: left; }
 section   { float: right; width: 80%;}
 footer    { clear: both;  display: block; }
