--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,2 +1,7 @@
-  <h3>Bienvenido a <%= title %></h3>
-  El portal donde podrá crear sus propios juegos!
+<% if(!session.user) { %>
+    <h3>Bienvenido a <%= title %></h3>
+    <p>¡El portal donde podrás crear tus propios juegos!</p>
+<% } else { %>
+    <h3>Bienvenido a <%= title %> <%= session.user.username %></h3>
+    <p>¡El portal donde podrás crear tus propios juegos!</p>
+<% } %>
