--- a/views/quizes/show.ejs
+++ b/views/quizes/show.ejs
@@ -1,5 +1,22 @@
-<% if(quiz.image) { %>
-  <p><img class="quiz_img" src="/media/<%= quiz.image %>"></p>
+<%
+if(session.user) {
+  if(mark === 'unchecked') {
+  %>
+    <form method="post" action="/user/<%= session.user.id %>/favourites/<%= quiz.id %>?_method=put">
+      <input class="unchecked" type="submit" value="" />
+    </form>
+  <% }
+  if(mark === 'checked') {
+  %>
+    <form method="post" action="/user/<%= session.user.id %>/favourites/<%= quiz.id %>?_method=delete">
+      <button class="checked" type="submit" onClick="return confirm('Eliminar: <%= quiz.pregunta %> de Favoritos');"></button>
+    </form>
+  <%
+  }
+}
+if(quiz.image) {
+%>
+  <p><img class="quiz_img" src="/media/<%= quiz.image %>"/></p>
 <% } %>
 
 <form method="get" action="/quizes/<%= quiz.id %>/answer">
@@ -24,10 +41,13 @@ for(index in quiz.Comments) {
   %>
 		<p>- <%=quiz.Comments[index].texto%></p>
 	<%
-  } else if(session.user && (session.user.isAdmin || (session.user && quiz.UserId === session.user.id))){
+  } if(session.user && (session.user.isAdmin || (session.user && quiz.UserId === session.user.id))){
   %>
 		<p>- <%=quiz.Comments[index].texto%>
-			<a href="/quizes/<%= quiz.id %>/comments/<%=quiz.Comments[index].id%>/publish"><button>Publicar</button></a></p>
+			<a href="/quizes/<%= quiz.id %>/comments/<%=quiz.Comments[index].id%>/publish">
+        <button>Publicar</button>
+      </a>
+    </p>
 	<%
   }
   %>
