--- a/views/user/edit.ejs
+++ b/views/user/edit.ejs
@@ -1,11 +1,14 @@
 <p>Editar información de la cuenta:</p>
 
-<form method="post" action="/user/<%= user.id %>?_method=put" >
+<form method="post"
+      action="/user/<%= user.id %>?_method=put"
+      enctype="multipart/form-data">
   <% include _form.ejs %>
 </form>
 
 <form method="post" action="/user/<%= user.id %>?_method=delete">
-	<button type="submit" onClick="return confirm('Borrar cuenta: <%= user.username %>');">
+	<button type="submit"
+          onClick="return confirm('Borrar cuenta: <%= user.username %>');">
 	Eliminar cuenta
 	</button>
 </form>
