--- a/views/user/new.ejs
+++ b/views/user/new.ejs
@@ -1,5 +1,7 @@
 Crear usuario: <p>
 
-<form method="post" action="/user" >
+<form method="post"
+      action="/user"
+      enctype="multipart/form-data">
   <% include _form.ejs %>
 </form>
